# rusty-random-slug

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: publish.yml  pyci.yml  release.yml  rust.yml  tag.yml
src/: lib.rs  main.rs
src/data/: adjs.json  nouns.json  nouns.txt
